tests/baselines/reference/neverTypeErrors2.errors.txt
tests/cases/conformance/types/never/neverTypeErrors2.ts(3,5): error TS2322: Type 'number' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(4,5): error TS2322: Type 'string' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(5,5): error TS2322: Type 'boolean' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(6,5): error TS2322: Type 'undefined' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(7,5): error TS2322: Type 'null' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(8,5): error TS2322: Type '{}' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(9,5): error TS2349: This expression is not callable.
  Type 'never' has no call signatures.
tests/cases/conformance/types/never/neverTypeErrors2.ts(13,5): error TS2322: Type 'undefined' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(17,5): error TS2322: Type 'number' is not assignable to type 'never'.
tests/cases/conformance/types/never/neverTypeErrors2.ts(20,16): error TS2534: A function returning 'never' cannot have a reachable end point.
tests/cases/conformance/types/never/neverTypeErrors2.ts(23,17): error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/types/never/neverTypeErrors2.ts(24,17): error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'never'.


==== tests/cases/conformance/types/never/neverTypeErrors2.ts (12 errors) ====
    function f1() {
        let x: never;
        x = 1;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'never'.
        x = "abc";
        ~
!!! error TS2322: Type 'string' is not assignable to type 'never'.
        x = false;
        ~
!!! error TS2322: Type 'boolean' is not assignable to type 'never'.
        x = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'never'.
        x = null;
        ~
!!! error TS2322: Type 'null' is not assignable to type 'never'.
        x = {};
        ~
!!! error TS2322: Type '{}' is not assignable to type 'never'.
        x();
        ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'never' has no call signatures.
    }
    
    function f2(): never {
        return;
        ~~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'never'.
    }
    
    function f3(): never {
        return 1;
        ~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'never'.
    }
    
    function f4(): never {
                   ~~~~~
!!! error TS2534: A function returning 'never' cannot have a reachable end point.
    }
    
    for (const n of f4()) {}
                    ~~~~
!!! error TS2488: Type 'never' must have a '[Symbol.iterator]()' method that returns an iterator.
    for (const n in f4()) {}
                    ~~~~
!!! error TS2407: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter, but here has type 'never'.
    